# opentelemetry-stdout-tree

./: Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml
examples/: fibonacci.rs  http.rs  readme.rs  tree.rs
src/: format.rs  lib.rs  print.rs  semantics.rs
tests/: example_output.rs  readme_example.rs  version_numbers.rs
