[package]
name = "opentelemetry-stdout-tree"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
description = "OpenTelemetry span exporter, which prints traces in a tree-like format"
homepage = "https://github.com/frigus02/opentelemetry-stdout-tree"
repository = "https://github.com/frigus02/opentelemetry-stdout-tree"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1"
thiserror = "1"
opentelemetry = "0.11"
opentelemetry-semantic-conventions = "0.3"
termcolor = "1"
terminal_size = "0.1"
url = "2"

[dev-dependencies]
version-sync = "0.9.1"

[badges]
github = { repository = "frigus02/opentelemetry-stdout-tree", workflow = "CI" }
